disable body overflow - try to fix sticky

--- a/preload.css
+++ b/preload.css
@@ -6,9 +6,6 @@ body {
 html {
   overscroll-behavior: none;
 }
-body {
-  overflow-y: scroll;
-}
 
 .middle {
   position: absolute;
